--- a/.github/workflows/advancedWorkflow.yml
+++ b/.github/workflows/advancedWorkflow.yml
@@ -1,4 +1,6 @@
 name: first workflow
+env:
+  WORKFLOW_VAR: "This variable is declared at the workflow level"
 
 on:
   workflow_dispatch:
@@ -24,9 +26,15 @@ jobs:
 
   second_job:
     runs-on: ubuntu-latest
+    needs: first_job
+    env:
+      JOB_VAR: " This is a job variable"
     steps:
       - name: secondJob script
         shell: bash
         run: |
           echo this is the second job
           echo and this is the multiline script
+      - name: environment variables
+        env:
+          STEP_VAR: "This variable is declared at the step level"
